# Homework_web_7

./: .gitignore  alembic.ini  config.ini  connect_db.py  crud.py  main.py  models.py  my_select.py  pyproject.toml  seeds.py  test_conn.py
alembic/: env.py
alembic/versions/: 2c71b3313b3a_init.py  42c0fa08e9f1_init.py  752a634797cb_correct_student_group.py  900281132c64_init.py  9cb558e05e05_init.py  af0210298b4b_init.py  cd8385e32e85_init.py
