[tool.poetry]
name = "homework-web-7"
version = "0.1.0"
description = ""
authors = ["MaksymBratsiun <bratsyun_m@ukr.net>"]
readme = "README.md"
packages = [{include = "homework_web_7"}]

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.4"
alembic = "^1.9.4"
psycopg2 = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
